--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -50,24 +50,34 @@
                     </div>
                 {% endfor %}
             </div>
-            <!-- Task: show questions and choices -->
-            <!-- <HINT> Use Bootstrap Collapse to hide exam first, more details could be found here
-            https://www.w3schools.com/bootstrap4/bootstrap_collapse.asp-->
-
-            <!--
-
-            A collapse example here:
-            <div id="exam" class="collapse">
-                Click to expand elements within the collapse div
-                </div>
-
-            -->
-
-            <!-- <HINT> If user is authenticated, show course exam with a list of question -->
-
-            <!-- <HINT> Each example will have many questions -->
-
-            <!-- <HINT> Each question will have many choices -->
+                
+            {% if request.user.is_authenticated %}
+                <h2>Questions:</h2>
+                <form id="questionform" action="point to a submit view" method="post">
+                    {% csrf_token %}
+                    {% for question in course.questions.all %}
+                        <div class="card mt-1">
+                            <div class="card-header">
+                                <h5>{{ question.text }}</h5>
+                            </div>
+                            <div class="card-body">
+                                <div class="form-group">
+                                    {% for choice in question.choices.all %}
+                                        <div class="form-check">
+                                            <label class="form-check-label">
+                                                <input type="checkbox" name="choice_{{ choice.id }}"
+                                                        class="form-check-input" id="{{ choice.id }}"
+                                                        value="{{ choice.id }}">
+                                                        {{ choice.text }}
+                                            </label>
+                                        </div>
+                                     {% endfor %}
+                                 </div>
+                            </div>
+                        </div>
+                    {% endfor %}
+                </form>
+            {% endif %}
 
 
             <!-- <HINT> Create a form to collect the selected choices for all questions -->
@@ -95,8 +105,6 @@
                     <input class="btn btn-success btn-block" type="submit" value="Submit">
             </form> -->
 
-            <!--Check here to see more details Bootstrap checkbox
-             https://www.w3schools.com/bootstrap4/bootstrap_forms_inputs.asp-->
     </div>
 </body>
 </html>
