--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -36,19 +36,47 @@
 </nav>
 
 <div class="container-fluid">
-    {% if grade > 80 %}
+    {% if total_grade >= 80 %}
     <div class="alert alert-success">
-       <!--HINT Display passed info -->
+       Congrads! You have passed the exam: {{ total_grade }}/100
     </div>
         {% else %}
         <div class="alert alert-danger">
-            <!--HINT Display failed info -->
+            Failed! You have failed the exam: {{ total_grade }}/100
         </div>
         <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
         {% endif %}
         <div class="card-columns-vertical mt-1">
         <h5 class="">Exam results</h5>
-            <!--HINT Display exam results-->
+            {% for question in course.questions.all %}
+                <div class="card mt-1">
+                    <div class="card-header">
+                        <h5>{{ question.text }}</h5>
+                    </div>
+                    <div class="card-body">
+                        <div class="form-group">
+                            {% for choice in question.choices.all %}
+                                {% if choice.is_correct %}
+                                    {% if choice.id in selected_ids %}
+                                        <span style="color: green;">
+                                            Correct answer: {{ choice.text }}
+                                        </span>
+                                    {% else %}
+                                        <span style="color: yellow;">
+                                            Not selected: {{ choice.text }}
+                                        </span>
+                                    {% endif %}
+                                {% else %}
+                                    <span>
+                                        {{ choice.text }}
+                                    </span>
+                                {% endif %}
+                                </br>
+                            {% endfor %}
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
         </div>
     </div>
 </body>
